[package]
name = "govee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.22", features=["macros", "rt-multi-thread", "rt", "net", "sync", "time"]}
serde_json = "1.0.89"
serde = {version="1.0.195", features=["derive"]}
anyhow = "1"
log = "0.4.20"
env_logger = "0.10.1"
dotenvy = "0.15.7"
color-backtrace = "0.6.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.5"
iana-time-zone = "0.1.58"
clap = { version = "4.4.12", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
sqlite-cache = "0.1.3"
dirs-next = "2.0.0"
rusqlite = {version="0.27.0", features=["bundled"]}
if-addrs = "0.11.0"
once_cell = "1.19.0"
csscolorparser = "0.6.2"
data-encoding = "2.5.0"
clap-num = "1.0.2"
uuid = { version = "1.6.1", features = ["v4", "v5"] }
uncased = "0.9.9"
openssl = "0.10.62"
p12 = "0.6.3"
axum = "0.7.3"
tower-http = { version = "0.5.0", features = ["fs"] }
async-channel = "2.1.1"
serde_json_path_to_error = "0.1.4"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["strum_macros"] }
thiserror = "1.0.56"
arc-swap = "1.6.0"

[dependencies.mosquitto-rs]
version="0.10.0"
features = ["vendored-openssl"]
#path = "../mosquitto-rs/mosquitto-rs"

[dev-dependencies]
anyhow = "1"
k9 = "0.12.0"
