[package]
name = "govee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.44", features=["macros", "rt-multi-thread", "rt", "net", "sync", "time"]}
serde_json = "1.0.140"
serde = {version="1.0.219", features=["derive"]}
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15.7"
color-backtrace = "0.7.0"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1.62"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sqlite-cache = "0.1.3"
dirs-next = "2.0.0"
rusqlite = {version="0.27.0", features=["bundled"]}
if-addrs = "0.13.4"
once_cell = "1.21.1"
csscolorparser = "0.7.0"
data-encoding = "2.8.0"
clap-num = "1.2.0"
uuid = { version = "1.16.0", features = ["v4", "v5"] }
uncased = "0.9.9"
openssl = "0.10.71"
p12 = "0.6.3"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"] }
async-channel = "2.1.1"
serde_json_path_to_error = "0.1.4"
strum_macros = "0.27"
strum = { version = "0.27.1", features = ["strum_macros"] }
thiserror = "2.0.12"
arc-swap = "1.6.0"
async-trait = "0.1.88"
parking_lot = "0.12.1"

[dependencies.mosquitto-rs]
version="0.11.1"
features = ["vendored-openssl"]
#path = "../mosquitto-rs/mosquitto-rs"

[dev-dependencies]
anyhow = "1"
k9 = "0.12.0"
